# homelio

./: .gitignore  BRIEF.md  DONE.md  HANDOFF.md  PLANS.md  QA.md  README.md  SUBMISSION.md  pyproject.toml
config/mappings/: documents.yaml
materials/Материалы/: Описание целевой логики.md
notes/: architecture.md  field_inventory.yaml  preparation.md  reverse_engineering.md
output/: 01_Анкета_участника_заполнено.docx  02_Заявка_на_участие_в_закупке_заполнено.docx  03_Предложение_о_цене_договора_заполнено.docx
src/homelio/: __init__.py  cli.py  generator.py
tests/: test_cli.py
